添加了一些基础必要功能