@@ -3,6 +3,7 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 plugins {
     id("org.springframework.boot") version "3.0.1"
     id("io.spring.dependency-management") version "1.1.0"
+    id("war")
     kotlin("jvm") version "1.7.22"
     kotlin("plugin.spring") version "1.7.22"
 }
@@ -18,19 +19,29 @@ repositories {
     maven {
         setUrl("https://maven.aliyun.com/repository/spring/")
     }
+    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
-    implementation("org.springframework.boot:spring-boot-starter-web")
+    //spring
+    implementation("org.springframework.boot:spring-boot-starter-web:3.0.1")
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
+    implementation("org.springframework.boot:spring-boot-configuration-processor:3.0.1")
+    implementation("org.springframework.boot:spring-boot-starter-log4j2:3.0.1")
+
+    implementation("org.apache.logging.log4j:log4j-iostreams:2.19.0")
+
+    implementation("org.apache.ibatis:ibatis-core:3.0")
+    //kotlin
     implementation("org.jetbrains.kotlin:kotlin-reflect")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-    implementation("org.springframework.boot:spring-boot-starter-actuator")
+
     runtimeOnly("com.mysql:mysql-connector-j")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
-}
 
+
+}
 tasks.withType<KotlinCompile> {
     kotlinOptions {
         freeCompilerArgs = listOf("-Xjsr305=strict")
@@ -38,6 +49,13 @@ tasks.withType<KotlinCompile> {
     }
 }
 
-tasks.withType<Test> {
-    useJUnitPlatform()
+tasks.withType<Jar> {
+    manifest {
+        attributes["Add-Opens"] = "java.base/jdk.internal.loader"
+        attributes["Add-Exports"] = "java.base/jdk.internal.loader"
+    }
 }
+configurations.all {
+    exclude ("org.springframework.boot","spring-boot-starter-logging")
+}
+
